src/snapshots/hugr_qir__lower_ssa_vars__test__lowered@tail_call_result_downstream_phi.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:tail_call_result_downstream_phi>'
source_filename = "tail_call_result_downstream_phi"
target datalayout = "<normalized>"
target triple = "<normalized>"

@0 = private unnamed_addr constant [5 x i8] c"flag\00", align 1

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  br i1 %cond0, label %entry.dup.1, label %entry.dup.0

right:                                            ; preds = %entry.dup.1, %entry.dup.0
  br label %join

join:                                             ; preds = %entry.dup.0, %entry.dup.1, %right
  %phi.external = phi i1 [ false, %right ], [ %flag2, %entry.dup.1 ], [ %flag1, %entry.dup.0 ]
  tail call void @__test__consume_bool(i1 %phi.external)
  ret void

entry.dup.0:                                      ; preds = %entry
  %flag1 = call i1 @__quantum__qis__read_result__body(ptr null)
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  br i1 %cond1, label %join, label %right

entry.dup.1:                                      ; preds = %entry
  %flag2 = call i1 @__quantum__qis__read_result__body(ptr null)
  call void @__quantum__qis__reset__body(ptr null)
  br i1 %cond1, label %join, label %right
}

declare i1 @__quantum__qis__read_result__body(ptr)

declare void @__quantum__qis__reset__body(ptr)

declare void @__test__consume_bool(i1)
