src/snapshots/hugr_qir__lower_ssa_vars__test__lowered@tail_switch_terminator.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:tail_switch_terminator>'
source_filename = "tail_switch_terminator"
target datalayout = "<normalized>"
target triple = "<normalized>"

@0 = private unnamed_addr constant [6 x i8] c"which\00", align 1

define void @__hugr__.main.1(i1 %cond, i1 %flag) {
entry:
  %selected = select i1 %cond, ptr null, ptr inttoptr (i64 4 to ptr)
  %idx = zext i1 %flag to i64
  switch i64 %idx, label %entry.unreachabledefault [
    i64 0, label %exit.leaf.p2.0
    i64 1, label %exit.leaf.p1.0
  ]

entry.unreachabledefault:                         ; preds = %entry
  unreachable

exit.leaf.p1.0:                                   ; preds = %entry
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  br label %common.ret

exit.leaf.p2.0:                                   ; preds = %entry
  call void @__quantum__qis__reset__body(ptr null)
  br label %common.ret

common.ret:                                       ; preds = %exit.leaf.p1.0, %exit.leaf.p2.0
  br label %__prepare_module_record_output_final

__prepare_module_record_output_final:             ; preds = %common.ret
  call void @__quantum__rt__int_record_output(i64 1, ptr @0)
  call void @__quantum__rt__int_record_output(i64 0, ptr @0)
  ret void
}

declare void @__quantum__rt__int_record_output(i64, ptr)

declare void @__quantum__qis__reset__body(ptr)
