src/snapshots/hugr_qir__lower_ssa_vars__test__lowered_float_selects_and_phis@float_phi_with_constant_successor_incoming.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:float_phi_with_constant_successor_incoming>'
source_filename = "float_phi_with_constant_successor_incoming"
target datalayout = "<normalized>"
target triple = "<normalized>"

define void @__hugr__.main.1(i1 %cond0, i1 %cond1) {
entry:
  br i1 %cond0, label %left, label %right

left:                                             ; preds = %entry
  br label %merge.dup

merge.dup:                                        ; preds = %left
  br i1 %cond1, label %succ.dup, label %other

succ.dup:                                         ; preds = %merge.dup
  call void @consume(double 3.000000e+00)
  ret void

right:                                            ; preds = %entry
  br label %merge.dup1

merge.dup1:                                       ; preds = %right
  br i1 %cond1, label %succ.dup2, label %other

succ.dup2:                                        ; preds = %merge.dup1
  call void @consume(double 3.000000e+00)
  ret void

other:                                            ; preds = %merge.dup1, %merge.dup
  br label %succ.dup3

succ.dup3:                                        ; preds = %other
  call void @consume(double 4.000000e+00)
  ret void
}

declare void @consume(double)
