src/snapshots/hugr_qir__lower_ssa_vars__test__lowered_qubit_selects_and_phis@generates_qubit_selects_2_example.snap
---
source: src/lower_ssa_vars.rs
expression: "normalized_module_ir_for_snapshot(&module, fixture)"
---
; ModuleID = '<fixture:generates-qubit-selects-2-example>'
source_filename = "hugr-qir"
target datalayout = "<normalized>"
target triple = "<normalized>"

@0 = private unnamed_addr constant [3 x i8] c"c0\00", align 1
@1 = private unnamed_addr constant [3 x i8] c"c1\00", align 1
@2 = private unnamed_addr constant [3 x i8] c"q0\00", align 1
@3 = private unnamed_addr constant [3 x i8] c"q1\00", align 1
@4 = private unnamed_addr constant [3 x i8] c"q2\00", align 1
@5 = private unnamed_addr constant [3 x i8] c"q3\00", align 1
@6 = private unnamed_addr constant [8 x i8] c"c0 + c1\00", align 1
@7 = private unnamed_addr constant [18 x i8] c"2nd result as int\00", align 1
@8 = private unnamed_addr constant [3 x i8] c"q4\00", align 1
@9 = private unnamed_addr constant [3 x i8] c"q5\00", align 1

define dso_local void @__hugr__.main.1() local_unnamed_addr #0 {
alloca_block:
  tail call void @__quantum__qis__mz__body(ptr nonnull inttoptr (i64 4 to ptr), ptr null)
  %0 = tail call i1 @__quantum__qis__read_result__body(ptr null)
  tail call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr nonnull inttoptr (i64 5 to ptr))
  tail call void @__quantum__qis__mz__body(ptr nonnull inttoptr (i64 5 to ptr), ptr nonnull inttoptr (i64 1 to ptr))
  %1 = tail call i1 @__quantum__qis__read_result__body(ptr nonnull inttoptr (i64 1 to ptr))
  %"46_2.0" = zext i1 %0 to i64
  %2 = select i1 %0, i64 2, i64 1
  %"61_2.0" = select i1 %1, i64 %2, i64 %"46_2.0"
  br i1 %1, label %alloca_block.dup60, label %alloca_block.dup64

alloca_block.dup60:                               ; preds = %alloca_block
  br i1 %0, label %alloca_block.dup67, label %alloca_block.dup78

alloca_block.dup78:                               ; preds = %alloca_block.dup60
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr null, ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__reset__body(ptr null)
  %3 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 1 to ptr), ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  %4 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 2 to ptr), ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 2 to ptr))
  %5 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 3 to ptr), ptr inttoptr (i64 5 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 3 to ptr))
  %6 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 5 to ptr))
  br label %cond_exit_620

alloca_block.dup67:                               ; preds = %alloca_block.dup60
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr null)
  call void @__quantum__qis__mz__body(ptr null, ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__reset__body(ptr null)
  %7 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 1 to ptr), ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  %8 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 2 to ptr), ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 2 to ptr))
  %9 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 3 to ptr), ptr inttoptr (i64 5 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 3 to ptr))
  %10 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 5 to ptr))
  br label %29

alloca_block.dup64:                               ; preds = %alloca_block
  br i1 %0, label %alloca_block.dup68, label %alloca_block.dup79

alloca_block.dup79:                               ; preds = %alloca_block.dup64
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr null, ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__reset__body(ptr null)
  %11 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 1 to ptr), ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  %12 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 2 to ptr), ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 2 to ptr))
  %13 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 3 to ptr), ptr inttoptr (i64 5 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 3 to ptr))
  %14 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 5 to ptr))
  br label %cond_exit_620

alloca_block.dup68:                               ; preds = %alloca_block.dup64
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr inttoptr (i64 1 to ptr))
  call void @__quantum__qis__mz__body(ptr null, ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__reset__body(ptr null)
  %15 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 2 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 1 to ptr), ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 1 to ptr))
  %16 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 3 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 2 to ptr), ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 2 to ptr))
  %17 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 4 to ptr))
  call void @__quantum__qis__mz__body(ptr inttoptr (i64 3 to ptr), ptr inttoptr (i64 5 to ptr))
  call void @__quantum__qis__reset__body(ptr inttoptr (i64 3 to ptr))
  %18 = call i1 @__quantum__qis__read_result__body(ptr inttoptr (i64 5 to ptr))
  br label %29

cond_336_case_1:                                  ; preds = %30, %cond_exit_620
  %phi.calluser.edge44 = phi i1 [ %phi.edge, %cond_exit_620 ], [ %phi.calluser.edge47, %30 ]
  %phi.calluser.edge31 = phi i1 [ %phi.edge81, %cond_exit_620 ], [ %phi.calluser.edge34, %30 ]
  %phi.calluser.edge18 = phi i1 [ %phi.edge82, %cond_exit_620 ], [ %phi.calluser.edge21, %30 ]
  %phi.calluser.edge5 = phi i1 [ %phi.edge83, %cond_exit_620 ], [ %phi.calluser.edge8, %30 ]
  tail call void @__quantum__qis__mz__body(ptr null, ptr nonnull inttoptr (i64 6 to ptr))
  %19 = tail call i1 @__quantum__qis__read_result__body(ptr nonnull inttoptr (i64 6 to ptr))
  tail call void @__quantum__qis__mz__body(ptr nonnull inttoptr (i64 1 to ptr), ptr nonnull inttoptr (i64 7 to ptr))
  %20 = tail call i1 @__quantum__qis__read_result__body(ptr nonnull inttoptr (i64 7 to ptr))
  tail call void @__quantum__qis__mz__body(ptr nonnull inttoptr (i64 2 to ptr), ptr nonnull inttoptr (i64 8 to ptr))
  %21 = tail call i1 @__quantum__qis__read_result__body(ptr nonnull inttoptr (i64 8 to ptr))
  tail call void @__quantum__qis__mz__body(ptr nonnull inttoptr (i64 3 to ptr), ptr nonnull inttoptr (i64 9 to ptr))
  %22 = tail call i1 @__quantum__qis__read_result__body(ptr nonnull inttoptr (i64 9 to ptr))
  %"1071_0.0" = select i1 %19, i64 8, i64 0
  %"1106_0.0" = select i1 %20, i64 4, i64 0
  %"1141_0.0" = select i1 %21, i64 2, i64 0
  %"1176_0.0" = zext i1 %22 to i64
  %23 = or i64 %"1106_0.0", %"1071_0.0"
  %24 = or i64 %23, %"1141_0.0"
  %25 = or i64 %24, %"1176_0.0"
  %"1008_0.0" = zext i1 %21 to i64
  %26 = add nuw nsw i64 %"61_2.0", %"1008_0.0"
  %Pivot1825 = icmp slt i64 %26, 1
  br i1 %Pivot1825, label %cond_704_case_1.sink.split.dup, label %NodeBlock

cond_704_case_1.sink.split.dup:                   ; preds = %cond_336_case_1
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr inttoptr (i64 6 to ptr))
  br label %cond_704_case_1

NodeBlock:                                        ; preds = %cond_336_case_1
  %phi.calluser.edge49 = phi i1 [ %phi.calluser.edge44, %cond_336_case_1 ]
  %phi.calluser.edge36 = phi i1 [ %phi.calluser.edge31, %cond_336_case_1 ]
  %phi.calluser.edge23 = phi i1 [ %phi.calluser.edge18, %cond_336_case_1 ]
  %phi.calluser.edge10 = phi i1 [ %phi.calluser.edge5, %cond_336_case_1 ]
  %Pivot = icmp slt i64 %26, 2
  br i1 %Pivot, label %cond_704_case_1.sink.split.dup88, label %LeafBlock

LeafBlock:                                        ; preds = %NodeBlock
  %phi.calluser.edge51 = phi i1 [ %phi.calluser.edge49, %NodeBlock ]
  %phi.calluser.edge38 = phi i1 [ %phi.calluser.edge36, %NodeBlock ]
  %phi.calluser.edge25 = phi i1 [ %phi.calluser.edge23, %NodeBlock ]
  %phi.calluser.edge12 = phi i1 [ %phi.calluser.edge10, %NodeBlock ]
  %SwitchLeaf = icmp eq i64 %26, 2
  br i1 %SwitchLeaf, label %cond_704_case_1.sink.split.dup89, label %cond_704_case_1

cond_704_case_1.sink.split.dup88:                 ; preds = %NodeBlock
  %phi.calluser.edge48 = phi i1 [ %phi.calluser.edge49, %NodeBlock ]
  %phi.calluser.edge35 = phi i1 [ %phi.calluser.edge36, %NodeBlock ]
  %phi.calluser.edge22 = phi i1 [ %phi.calluser.edge23, %NodeBlock ]
  %phi.calluser.edge9 = phi i1 [ %phi.calluser.edge10, %NodeBlock ]
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr inttoptr (i64 7 to ptr))
  br label %cond_704_case_1

cond_704_case_1:                                  ; preds = %LeafBlock, %cond_704_case_1.sink.split.dup89, %cond_704_case_1.sink.split.dup88, %cond_704_case_1.sink.split.dup
  %phi.edge90 = phi i1 [ %phi.calluser.edge50, %cond_704_case_1.sink.split.dup89 ], [ %phi.calluser.edge44, %cond_704_case_1.sink.split.dup ], [ %phi.calluser.edge48, %cond_704_case_1.sink.split.dup88 ], [ %phi.calluser.edge51, %LeafBlock ]
  %phi.edge91 = phi i1 [ %phi.calluser.edge37, %cond_704_case_1.sink.split.dup89 ], [ %phi.calluser.edge31, %cond_704_case_1.sink.split.dup ], [ %phi.calluser.edge35, %cond_704_case_1.sink.split.dup88 ], [ %phi.calluser.edge38, %LeafBlock ]
  %phi.edge92 = phi i1 [ %phi.calluser.edge24, %cond_704_case_1.sink.split.dup89 ], [ %phi.calluser.edge18, %cond_704_case_1.sink.split.dup ], [ %phi.calluser.edge22, %cond_704_case_1.sink.split.dup88 ], [ %phi.calluser.edge25, %LeafBlock ]
  %phi.edge93 = phi i1 [ %phi.calluser.edge11, %cond_704_case_1.sink.split.dup89 ], [ %phi.calluser.edge5, %cond_704_case_1.sink.split.dup ], [ %phi.calluser.edge9, %cond_704_case_1.sink.split.dup88 ], [ %phi.calluser.edge12, %LeafBlock ]
  tail call void @__quantum__qis__mz__body(ptr nonnull inttoptr (i64 6 to ptr), ptr nonnull inttoptr (i64 10 to ptr))
  %27 = tail call i1 @__quantum__qis__read_result__body(ptr nonnull inttoptr (i64 10 to ptr))
  tail call void @__quantum__qis__mz__body(ptr nonnull inttoptr (i64 7 to ptr), ptr nonnull inttoptr (i64 11 to ptr))
  %28 = tail call i1 @__quantum__qis__read_result__body(ptr nonnull inttoptr (i64 11 to ptr))
  br label %__prepare_module_record_output_final

29:                                               ; preds = %alloca_block.dup68, %alloca_block.dup67
  %phi.edge84 = phi i1 [ %10, %alloca_block.dup67 ], [ %18, %alloca_block.dup68 ]
  %phi.edge85 = phi i1 [ %9, %alloca_block.dup67 ], [ %17, %alloca_block.dup68 ]
  %phi.edge86 = phi i1 [ %8, %alloca_block.dup67 ], [ %16, %alloca_block.dup68 ]
  %phi.edge87 = phi i1 [ %7, %alloca_block.dup67 ], [ %15, %alloca_block.dup68 ]
  tail call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr null)
  br label %cond_exit_620

cond_exit_620:                                    ; preds = %alloca_block.dup79, %alloca_block.dup78, %29
  %phi.edge = phi i1 [ %6, %alloca_block.dup78 ], [ %14, %alloca_block.dup79 ], [ %phi.edge84, %29 ]
  %phi.edge81 = phi i1 [ %5, %alloca_block.dup78 ], [ %13, %alloca_block.dup79 ], [ %phi.edge85, %29 ]
  %phi.edge82 = phi i1 [ %4, %alloca_block.dup78 ], [ %12, %alloca_block.dup79 ], [ %phi.edge86, %29 ]
  %phi.edge83 = phi i1 [ %3, %alloca_block.dup78 ], [ %11, %alloca_block.dup79 ], [ %phi.edge87, %29 ]
  br i1 %1, label %30, label %cond_336_case_1

30:                                               ; preds = %cond_exit_620
  %phi.calluser.edge47 = phi i1 [ %phi.edge, %cond_exit_620 ]
  %phi.calluser.edge34 = phi i1 [ %phi.edge81, %cond_exit_620 ]
  %phi.calluser.edge21 = phi i1 [ %phi.edge82, %cond_exit_620 ]
  %phi.calluser.edge8 = phi i1 [ %phi.edge83, %cond_exit_620 ]
  tail call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr nonnull inttoptr (i64 1 to ptr))
  br label %cond_336_case_1

cond_704_case_1.sink.split.dup89:                 ; preds = %LeafBlock
  %phi.calluser.edge50 = phi i1 [ %phi.calluser.edge51, %LeafBlock ]
  %phi.calluser.edge37 = phi i1 [ %phi.calluser.edge38, %LeafBlock ]
  %phi.calluser.edge24 = phi i1 [ %phi.calluser.edge25, %LeafBlock ]
  %phi.calluser.edge11 = phi i1 [ %phi.calluser.edge12, %LeafBlock ]
  tail call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr nonnull inttoptr (i64 7 to ptr))
  call void @__quantum__qis__phasedx__body(double 0x400921FB54442D18, double 0.000000e+00, ptr inttoptr (i64 6 to ptr))
  br label %cond_704_case_1

__prepare_module_record_output_final:             ; preds = %cond_704_case_1
  call void @__quantum__rt__bool_record_output(i1 %0, ptr @0)
  call void @__quantum__rt__bool_record_output(i1 %1, ptr @1)
  call void @__quantum__rt__bool_record_output(i1 %phi.edge93, ptr @2)
  call void @__quantum__rt__bool_record_output(i1 %phi.edge92, ptr @3)
  call void @__quantum__rt__bool_record_output(i1 %phi.edge91, ptr @4)
  call void @__quantum__rt__bool_record_output(i1 %phi.edge90, ptr @5)
  call void @__quantum__rt__int_record_output(i64 %"61_2.0", ptr @6)
  call void @__quantum__rt__int_record_output(i64 %25, ptr @7)
  call void @__quantum__rt__bool_record_output(i1 %27, ptr @8)
  call void @__quantum__rt__bool_record_output(i1 %28, ptr @9)
  ret void
}

declare void @__quantum__qis__mz__body(ptr, ptr) local_unnamed_addr

declare i1 @__quantum__qis__read_result__body(ptr) local_unnamed_addr

declare void @__quantum__qis__phasedx__body(double, double, ptr) local_unnamed_addr

declare void @__quantum__rt__bool_record_output(i1, ptr) local_unnamed_addr

declare void @__quantum__qis__reset__body(ptr) local_unnamed_addr

declare void @__quantum__rt__int_record_output(i64, ptr) local_unnamed_addr

attributes #0 = { "entry_point" "output_labeling_schema" "qir_profiles"="custom" "required_num_qubits"="8" "required_num_results"="12" }

!llvm.module.flags = !{!0, !1, !2, !3}

!0 = !{i32 1, !"qir_major_version", i32 1}
!1 = !{i32 7, !"qir_minor_version", i32 0}
!2 = !{i32 1, !"dynamic_qubit_management", i1 false}
!3 = !{i32 1, !"dynamic_result_management", i1 false}
